# vibex

./: AGENTS.md  CMakeLists.txt  DESIGN.md  DESIGN_REWRITE.md  README.md  USAGE.md
.github/workflows/: ci.yml
examples/: 01_basic_eval.cpp  02_symbolic_diff.cpp  03_simplify.cpp  04_tape_ad.cpp  05_torchjit.cpp  06_ops_and_cse.cpp  07_hash_cse.cpp  08_rewrite_rules.cpp  09_rewrite_nested.cpp
include/et/: compile_cse.hpp  compile_hash_cse.hpp  compile_runtime.hpp  expr.hpp  match.hpp  normalize.hpp  optimize.hpp  pattern.hpp  rewrite.hpp  rules_default.hpp  runtime_ast.hpp  simplify.hpp  tape_backend.hpp  torch_jit_backend.hpp
tests/: test_binary.cpp  test_compile_hash_cse.cpp  test_compile_runtime_and_tape.cpp  test_compile_runtime_var_indices.cpp  test_core.cpp  test_cse.cpp  test_denormalize_multi_sub.cpp  test_match_edgecases.cpp  test_normalize.cpp  test_normalize_edges.cpp  test_normalize_sub.cpp  test_ops.cpp  test_pattern_match.cpp  test_poly_factor.cpp  test_rewrite.cpp  test_rewrite_large.cpp  test_rewrite_nested_large.cpp  test_rules_guards.cpp  test_runtime.cpp  test_simplify.cpp  test_torch.cpp
